--- a/src/pages/Cardapio/Cardapio.module.scss
+++ b/src/pages/Cardapio/Cardapio.module.scss
@@ -6,9 +6,11 @@
   @media (max-width: $desktop_xsm) {
     padding: 20px $padding-horizontal-mobile;
   }
+
   @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
     padding: 20px $padding-horizontal-sm;
   }
+
   @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
     padding: 20px $padding-horizontal-md;
   }
@@ -44,15 +46,27 @@
   @media (max-width: $desktop_xsm) {
     padding: 50px $padding-horizontal-mobile;
   }
+
   @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
     padding: 50px $padding-horizontal-sm;
   }
+
   @media (min-width: $desktop_sm) and (max-width: $desktop_md) {
     padding: 50px $padding-horizontal-md;
   }
+
   &__titulo {
     color: $dark;
     font-size: 3rem;
     margin-bottom: 30px;
+  }
+
+  &__filtros {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    width: 100%;
   }
 }
