--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 
 import “normalize.css”
 
+#root > main.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 
 body {
   background-color: #f6f6f6;
