--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,10 +1,10 @@
-$padding-horizontal: 250px;
 $padding-horizontal-mobile: 100px;
 $padding-horizontal-sm: 150px;
 $padding-horizontal-md: 200px;
 $padding-horizontal: 250px;
 $dark: #242536;
 $dark-grey: #92929d;
+$darkest-grey: #70707b;
 $grey: #e4e4e4;
 $black: #4c4d5e;
 $light-grey: #f6f6f6;
